syntax = "proto3";

package acafela.sip;

option java_package = "com.acafela.harmony.sip";

enum Command {
    INVITE = 0;
    RINGING = 1;
    ACCEPTCALL = 2;
    MAKECALL = 3;
    OPENSESSION = 4;
    STARTVIDEO = 5;
    STOPVIDEO = 6;
    TERMINATE = 7;
    BYE = 8;
    REGISTER = 9;
    CLOSESESSION = 10;
}

enum SessionType {
    SENDAUDIO = 0;
    RECIEVEAUDIO = 1;
    SENDVIDEO = 2;
    RECIEVEVIDEO = 3;
}

message Session
{
	SessionType sessiontype = 1;
	string ip = 2;
	int32 port = 3;
}

message SessionInfo
{
		repeated Session sessions = 1;
}
  
message SIPMessage {
    Command cmd = 1;
    bool isACK = 2;
    bool isVideoCall = 3;
    string from  = 4;
    string to  = 5;
		string sessionid  = 6;   
	  int32  seq = 7;
	  SessionInfo sessioninfo = 8;
}
